# c4-e5-chess

./: .gitmodules  Cargo.toml
src/: lib.rs  main.rs
src/cmd/: cli.rs  time_management.rs
src/engine/: game.rs  move_gen.rs
